@@ -2,6 +2,7 @@ Changes for the CPAN Testers Preferences website
 ================================================
 
         - fixed license fields in META.json to be lists.
+        - added documentation about the CPAN Testers Fund.
 
 0.17	2014-07-11
         - removed obsolete files.
